Changed a vmax unit to vh to avoid clipping in certain aspect ratios

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -53,7 +53,7 @@
     font-weight: bold;
     background-color: lightgray;
     padding: .7vh 2vw;
-    margin: .7vmax 0;
+    margin: .7vh 0;
 }
 
 .main__Swipe-User > span {
